<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/lessonsActivityDrawerLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundColor"
    tools:context=".activities.NewWorkoutEntryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/NewEntry"
            android:textAlignment="center"
            android:textColor="@color/titleColor"
            android:textSize="36sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/durationEditText"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/Duration"
            android:autofillHints="@string/Duration"
            android:inputType="number"
            android:maxLength="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <EditText
            android:id="@+id/intensityEditText"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginTop="104dp"
            android:autofillHints="@string/Intensity"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/Intensity"
            android:inputType="numberDecimal"
            android:maxLength="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <EditText
            android:id="@+id/descEntryEditText"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="@string/Description"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/Description"
            android:inputType="textMultiLine"
            android:maxLength="1000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intensityEditText" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:outlineProvider="none"
            android:text="@string/Submit"
            android:textColor="@color/titleColor"
            app:layout_constraintBottom_toTopOf="@id/middleHorizontalGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descEntryEditText"
            app:layout_constraintVertical_bias="0.412" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middleHorizontalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.9"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>