<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/lessonsActivityDrawerLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundColor"
    tools:context=".activities.WorkoutSubMenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/mainTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/Activity"
            android:textAlignment="center"
            android:textColor="@color/titleColor"
            android:textSize="38sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/upperHorizontalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/Date"
            app:layout_constraintBottom_toTopOf="@id/dateSpinner"
            app:layout_constraintStart_toStartOf="@id/dateSpinner" />

        <Spinner
            android:id="@+id/dateSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:foregroundTint="@color/titleColor"
            app:layout_constraintBottom_toTopOf="@id/cardsRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upperHorizontalGuideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cardsRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="330dp"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/dateSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/middleHorizontalGuideline"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarFadeDuration="1500"
            android:scrollbarStyle="insideInset"
            >
        </androidx.recyclerview.widget.RecyclerView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middleHorizontalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.85"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/newEntryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/middleHorizontalGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/plus_circle_light"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Plus"
            app:tint="@color/secondaryColor" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lowerHorizontalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.98"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>